mobile layout issue fixed

--- a/src/app/member-edit/member-edit.component.scss
+++ b/src/app/member-edit/member-edit.component.scss
@@ -1,85 +1,112 @@
 .profile_container {
-    background-color: #f6f6f6;
-    .container_header {
-      // padding: 30px;
-      height: 50vh;
-      // background-color: #fd507e;
-      background-position: 50%;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-image: linear-gradient(111.3deg, rgba(74, 105, 187, .9) 9.6%, rgba(216, 68, 148, .4) 103.3%), url(/assets/images/hero.svg);;
-      background-image: linear-gradient(111.3deg, rgba(187, 74, 166, 0.6) 9.6%, rgba(58, 102, 223, 0.4) 103.3%), url(/assets/images/hero.svg);    
-      background-image: linear-gradient(111.3deg, rgba(155, 167, 95, 0.6) 9.6%, rgba(188, 99, 89, 0.4) 103.3%), url(/assets/images/hero.svg);    
-      // background-image: linear-gradient(111.3deg, rgba(187, 74, 166, 0.2) 9.6%, rgba(58, 102, 223, 0.2) 103.3%), url(/assets/images/hero.jpg); 
-      color: #fff;
-      display: grid;
-      grid-template-rows: auto 1fr;
-      // justify-content: center;
-      align-items: center;
-  
-      h1 {
-        font-size: 48px;
-        font-weight: 700;
-        line-height: 56px;
-        letter-spacing: 2px;
-      }
+  background-color: #f6f6f6;
+  .container_header {
+    // padding: 30px;
+    height: 50vh;
+    // background-color: #fd507e;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: linear-gradient(
+        111.3deg,
+        rgba(74, 105, 187, 0.9) 9.6%,
+        rgba(216, 68, 148, 0.4) 103.3%
+      ),
+      url(/assets/images/hero.svg);
+    background-image: linear-gradient(
+        111.3deg,
+        rgba(187, 74, 166, 0.6) 9.6%,
+        rgba(58, 102, 223, 0.4) 103.3%
+      ),
+      url(/assets/images/hero.svg);
+    background-image: linear-gradient(
+        111.3deg,
+        rgba(155, 167, 95, 0.6) 9.6%,
+        rgba(188, 99, 89, 0.4) 103.3%
+      ),
+      url(/assets/images/hero.svg);
+    // background-image: linear-gradient(111.3deg, rgba(187, 74, 166, 0.2) 9.6%, rgba(58, 102, 223, 0.2) 103.3%), url(/assets/images/hero.jpg);
+    color: #fff;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    // justify-content: center;
+    align-items: center;
+
+    h1 {
+      font-size: 48px;
+      font-weight: 700;
+      line-height: 56px;
+      letter-spacing: 2px;
     }
-    .profile_background {
-      background-color: #00000099;
-      opacity: 0.6;
-      img {
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-      }
+  }
+  .profile_background {
+    background-color: #00000099;
+    opacity: 0.6;
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
     }
-    //   .profile_image {
-    .avatar {
-      position: absolute;
-      display: flex;
-      justify-content: left;
-      top: 200px;
-      left: 150px;
-      align-items: center;
-      grid-gap: 35px;
-      gap: 35px;
-      cursor: pointer;
-  
-      h2 {
-        color: white;
-        font-weight: 500;
-        margin: 0px;
-      }
-      img {
-        height: 180px;
-        width: 180px;
-        border-radius: 50%;
-        border: 6px solid white;
-      }
-      .status {
-        padding: 5px 10px;
-        background-color: orangered;
-        color: white;
-        border-radius: 20px;
-      }
+  }
+  //   .profile_image {
+  .avatar {
+    position: absolute;
+    display: flex;
+    justify-content: left;
+    top: 200px;
+    left: 150px;
+    align-items: center;
+    grid-gap: 35px;
+    gap: 35px;
+    cursor: pointer;
+    @media only screen and (max-width: 960px) {
+      flex-direction: column;
+      top: 80px;
+      left: 80px;
+      gap: 5px;
     }
+
+    h2 {
+      color: white;
+      font-weight: 500;
+      margin: 0px;
+    }
+    img {
+      height: 180px;
+      width: 180px;
+      border-radius: 50%;
+      border: 6px solid white;
+    }
+    .status {
+      padding: 5px 10px;
+      background-color: orangered;
+      color: white;
+      border-radius: 20px;
+    }
+  }
 }
 .overlay {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: absolute;
-    width: 180px;
-    height: 80px;
-    background-color: rgb(0 0 0 / 60%);
-    border-bottom-left-radius: 110px;
-    border-bottom-right-radius: 110px;
-    border-bottom: 0;
-    bottom: 12px;
-    left: 10px;
-    mat-icon {
-      color: white;
-    }
-    animation: name duration timing-function delay iteration-count direction
-      fill-mode;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  width: 180px;
+  height: 80px;
+  background-color: rgb(0 0 0 / 42%);
+  border-bottom-left-radius: 110px;
+  border-bottom-right-radius: 110px;
+  border-bottom: 0;
+  bottom: 0px;
+  left: 0px;
+  height: 180px;
+  width: 180px;
+  border-radius: 50%;
+  border: 6px solid white;
+  @media only screen and (max-width: 960px) {
+    top: 0px;
+    left: 0px;
   }
+  mat-icon {
+    color: white;
+  }
+}
